--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -1,7 +1,14 @@
 .button {
     display: inline-block;
-    border-radius: 10px;
+    border-radius: 7px;
     padding: 10px 5px;
     box-shadow: 0 9px 20px rgba(0,0,0,0.25), 0 5px 5px rgba(0,0,0,0.22);
     background-color: $color-primary;
+}
+
+.submit-button {
+    border:none;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
 }
