--- a/sass/layout/_content.scss
+++ b/sass/layout/_content.scss
@@ -1,4 +1,4 @@
 .content {
-    min-height: 93vh;
-    height: 100%;
+    min-height: 93vh;   
+    overflow: hidden;
 }
