--- a/sass/pages/_signup.scss
+++ b/sass/pages/_signup.scss
@@ -1,6 +1,32 @@
-.box-signup {
+.signup-group {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    
+    &__input-field {
+        margin-top: 4rem;
+    }
+
+    &__label {
+        font-size: 1.5rem;
+    }
+
+    &__input {
+        margin-top: 0.5rem;
+        background-color: transparent;
+        font-size: 2.1rem;
+        border: 0;
+        border-bottom: 2px solid $color-primary;
+    }
+
+    &__button {
+        padding: .7rem 1.4rem;
+        &-div{ 
+        margin-top: 5rem;
+        width: 100%;
+        text-align: center;
+        }
+    }
 }
 
 .title-signup {
